{
  "version": 4,
  "terraform_version": "1.2.4",
  "serial": 28,
  "lineage": "f7ee7152-f8af-67d5-44af-cd37f3b1aa96",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_address",
      "name": "nat-ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "34.171.28.9",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2022-11-14T20:29:56.096-08:00",
            "id": "projects/internal-interview-candidates/regions/us-central1/addresses/web-app-nap-ip",
            "name": "web-app-nap-ip",
            "network_tier": "PREMIUM",
            "prefix_length": 0,
            "project": "internal-interview-candidates",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/internal-interview-candidates/regions/us-central1/addresses/web-app-nap-ip",
            "users": [
              "https://www.googleapis.com/compute/v1/projects/internal-interview-candidates/regions/us-central1/routers/web-app-nat-router"
            ]
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_backend_service",
      "name": "backend_service",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "affinity_cookie_ttl_sec": 0,
            "backend": [
              {
                "balancing_mode": "RATE",
                "capacity_scaler": 1,
                "group": "https://www.googleapis.com/compute/v1/projects/internal-interview-candidates/zones/us-central1-a/instanceGroups/web-app-vm-group",
                "max_connections": 0,
                "max_connections_per_endpoint": 0,
                "max_connections_per_instance": 0,
                "max_rate": 0,
                "max_rate_per_endpoint": 0,
                "max_rate_per_instance": 100,
                "max_utilization": 0
              }
            ],
            "connection_draining_timeout_sec": 300,
            "creation_timestamp": "2022-11-14T20:45:02.054-08:00",
            "enable_cdn": false,
            "fingerprint": "AhXTdvOgiE8=",
            "health_checks": [
              "https://www.googleapis.com/compute/v1/projects/internal-interview-candidates/global/healthChecks/web-app-healthcheck"
            ],
            "id": "projects/internal-interview-candidates/global/backendServices/web-app-backend-service",
            "load_balancing_scheme": "EXTERNAL",
            "name": "web-app-backend-service",
            "port_name": "http",
            "project": "internal-interview-candidates",
            "protocol": "HTTP",
            "self_link": "https://www.googleapis.com/compute/v1/projects/internal-interview-candidates/global/backendServices/web-app-backend-service",
            "session_affinity": "NONE",
            "timeout_sec": 30
          },
          "dependencies": [
            "google_compute_health_check.healthcheck",
            "google_compute_instance_group_manager.web_private_group",
            "google_compute_instance_template.web_server",
            "google_compute_network.vpc_network",
            "google_compute_subnetwork.subnet-with-logging"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-http",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2022-11-14T20:30:18.064-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/internal-interview-candidates/global/firewalls/web-app-fw-allow-http",
            "log_config": [],
            "name": "web-app-fw-allow-http",
            "network": "https://www.googleapis.com/compute/v1/projects/internal-interview-candidates/global/networks/internal-interview-candidates-vpc-123",
            "priority": 1000,
            "project": "internal-interview-candidates",
            "self_link": "https://www.googleapis.com/compute/v1/projects/internal-interview-candidates/global/firewalls/web-app-fw-allow-http",
            "source_ranges": [],
            "source_service_accounts": [],
            "source_tags": [
              "web"
            ],
            "target_service_accounts": [],
            "target_tags": [
              "http"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_global_forwarding_rule",
      "name": "global_forwarding_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "projects/internal-interview-candidates/global/forwardingRules/web-app-global-forwarding-rule",
            "ip_address": "34.160.73.172",
            "ip_protocol": "TCP",
            "label_fingerprint": "42WmSpB8rSM=",
            "load_balancing_scheme": "EXTERNAL",
            "name": "web-app-global-forwarding-rule",
            "port_range": "80",
            "project": "internal-interview-candidates",
            "self_link": "https://www.googleapis.com/compute/v1/projects/internal-interview-candidates/global/forwardingRules/web-app-global-forwarding-rule",
            "target": "https://www.googleapis.com/compute/v1/projects/internal-interview-candidates/global/targetHttpProxies/web-app-proxy"
          },
          "dependencies": [
            "google_compute_backend_service.backend_service",
            "google_compute_health_check.healthcheck",
            "google_compute_instance_group_manager.web_private_group",
            "google_compute_instance_template.web_server",
            "google_compute_network.vpc_network",
            "google_compute_subnetwork.subnet-with-logging",
            "google_compute_target_http_proxy.target_http_proxy",
            "google_compute_url_map.url_map"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc_network",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/internal-interview-candidates/global/networks/internal-interview-candidates-vpc-123",
            "mtu": 0,
            "name": "internal-interview-candidates-vpc-123",
            "project": "internal-interview-candidates",
            "routing_mode": "GLOBAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/internal-interview-candidates/global/networks/internal-interview-candidates-vpc-123"
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_router",
      "name": "nat-router",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2022-11-14T20:53:58.999-08:00",
            "encrypted_interconnect_router": false,
            "id": "projects/internal-interview-candidates/regions/us-central1/routers/web-app-nat-router",
            "name": "web-app-nat-router",
            "network": "https://www.googleapis.com/compute/v1/projects/internal-interview-candidates/global/networks/internal-interview-candidates-vpc-123",
            "project": "internal-interview-candidates",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/internal-interview-candidates/regions/us-central1/routers/web-app-nat-router"
          },
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_router_nat",
      "name": "nat-gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_dynamic_port_allocation": false,
            "enable_endpoint_independent_mapping": true,
            "icmp_idle_timeout_sec": 30,
            "id": "internal-interview-candidates/us-central1/web-app-nat-router/web-app-nat-gateway",
            "max_ports_per_vm": 0,
            "min_ports_per_vm": 0,
            "name": "web-app-nat-gateway",
            "nat_ip_allocate_option": "MANUAL_ONLY",
            "nat_ips": [
              "https://www.googleapis.com/compute/v1/projects/internal-interview-candidates/regions/us-central1/addresses/web-app-nap-ip"
            ],
            "project": "internal-interview-candidates",
            "region": "us-central1",
            "router": "web-app-nat-router",
            "source_subnetwork_ip_ranges_to_nat": "ALL_SUBNETWORKS_ALL_IP_RANGES",
            "tcp_established_idle_timeout_sec": 1200,
            "tcp_transitory_idle_timeout_sec": 30,
            "udp_idle_timeout_sec": 30
          },
          "dependencies": [
            "google_compute_address.nat-ip",
            "google_compute_network.vpc_network",
            "google_compute_router.nat-router"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "subnet-with-logging",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2022-11-14T20:30:18.104-08:00",
            "gateway_address": "10.2.0.1",
            "id": "projects/internal-interview-candidates/regions/us-central1/subnetworks/log-test-subnetwork",
            "ip_cidr_range": "10.2.0.0/16",
            "name": "log-test-subnetwork",
            "network": "https://www.googleapis.com/compute/v1/projects/internal-interview-candidates/global/networks/internal-interview-candidates-vpc-123",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "internal-interview-candidates",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/internal-interview-candidates/regions/us-central1/subnetworks/log-test-subnetwork",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.vpc_network"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_target_http_proxy",
      "name": "target_http_proxy",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2022-11-14T20:45:37.164-08:00",
            "id": "projects/internal-interview-candidates/global/targetHttpProxies/web-app-proxy",
            "name": "web-app-proxy",
            "project": "internal-interview-candidates",
            "proxy_bind": false,
            "proxy_id": 6769491279184045982,
            "self_link": "https://www.googleapis.com/compute/v1/projects/internal-interview-candidates/global/targetHttpProxies/web-app-proxy",
            "url_map": "https://www.googleapis.com/compute/v1/projects/internal-interview-candidates/global/urlMaps/web-app-load-balancer"
          },
          "dependencies": [
            "google_compute_backend_service.backend_service",
            "google_compute_health_check.healthcheck",
            "google_compute_instance_group_manager.web_private_group",
            "google_compute_instance_template.web_server",
            "google_compute_network.vpc_network",
            "google_compute_subnetwork.subnet-with-logging",
            "google_compute_url_map.url_map"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_url_map",
      "name": "url_map",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2022-11-14T20:45:24.860-08:00",
            "default_route_action": [],
            "default_service": "https://www.googleapis.com/compute/v1/projects/internal-interview-candidates/global/backendServices/web-app-backend-service",
            "default_url_redirect": [],
            "description": "",
            "fingerprint": "EeCPjkwbFN4=",
            "header_action": [],
            "host_rule": [],
            "id": "projects/internal-interview-candidates/global/urlMaps/web-app-load-balancer",
            "map_id": 3506806002544453515,
            "name": "web-app-load-balancer",
            "path_matcher": [],
            "project": "internal-interview-candidates",
            "self_link": "https://www.googleapis.com/compute/v1/projects/internal-interview-candidates/global/urlMaps/web-app-load-balancer",
            "test": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_backend_service.backend_service",
            "google_compute_health_check.healthcheck",
            "google_compute_instance_group_manager.web_private_group",
            "google_compute_instance_template.web_server",
            "google_compute_network.vpc_network",
            "google_compute_subnetwork.subnet-with-logging"
          ]
        }
      ]
    }
  ]
}